# colcon-runner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  codespell-ignore.txt  mypy.ini  pyproject.toml  rockerc.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
colcon_runner/: __main__.py  basic_class.py  colcon_runner.py  cr.py  generate_defaults.py
docs/: conf.py  index.rst  intro.rst
example/: example.py
ros_ws/src/jazzy_cpp_demo/: CMakeLists.txt  package.xml
ros_ws/src/jazzy_cpp_demo/include/jazzy_cpp_demo/: adder.hpp
ros_ws/src/jazzy_cpp_demo/src/: adder.cpp  main.cpp
ros_ws/src/jazzy_cpp_demo/test/: test_adder.cpp
ros_ws/src/jazzy_py_demo/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/jazzy_py_demo/jazzy_py_demo/: __init__.py  talker.py
ros_ws/src/jazzy_py_demo/test/: test_talker.py
scripts/: rename_project.sh
test/: colcon_defaults_template.yaml  test_basic.py  test_generate_defaults.py  test_ros_workspace_integration.py
vscode-userdata:/home/ags/.config/Code/User/: settings.json
