[project]
name = "colcon-runner"
version = "0.12.1"
authors = [{ name = "Austin Gregg-Smith", email = "blooop@gmail.com" }]
description = "A concise CLI wrapper for colcon build/test/clean workflows."
readme = "README.md"
license = "MIT"

dependencies = []

[project.urls]
Source = "https://github.com/blooop/colcon-runner"
Home = "https://github.com/blooop/colcon-runner"

[project.scripts]
cr = "colcon_runner.colcon_runner:main"

[tool.pixi.workspace]
channels = ["conda-forge", "https://prefix.dev/blooop"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.10"
shellcheck = ">=0.10.0,<0.11"
devpod = ">=0.8.0,<0.9"
gh = ">=2.83.0,<3.0"
ralph-claude-code = ">=0.1.0"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.pypi-dependencies]
colcon-runner = { path = ".", editable = true }

[tool.pixi.feature.test.pypi-dependencies]
colcon-common-extensions = ">=0.3.0"
colcon-clean = ">=0.2.1"
rosdep = ">=0.24"
rosdistro = ">=0.9"
vcstool = ">=0.3.0"

[project.optional-dependencies]
test = [
  "pylint>=3.2.5,<=4.0.4",
  "pytest-cov>=4.1,<=7.0.0",
  "pytest>=7.4,<=9.0.2",
  "hypothesis>=6.104.2,<=6.151.4",
  "ruff>=0.5.0,<=0.14.14",
  "coverage>=7.5.4,<=7.13.2",
  "prek>=0.2.28,<0.4.0",
  "ty>=0.0.12,<=0.0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["colcon_runner"]

# Environments
[tool.pixi.environments]
default = { features = ["test", "ros_jazzy"], solve-group = "default" }
py310 = ["py310", "test", "ros_jazzy"]
py311 = ["py311", "test", "ros_jazzy"]
py312 = ["py312", "test", "ros_jazzy"]
py313 = ["py313", "test", "ros_jazzy"]
ros-jazzy = { features = ["ros_jazzy", "test"], solve-group = "ros-jazzy" }

[tool.pixi.feature.ros_jazzy.dependencies]
python = ">=3.10"
cmake = ">=3.26"
make = "*"
pkg-config = "*"
gtest = ">=1.14"
colcon-core = ">=0.20.1"

[tool.pixi.tasks]
dev-add-docker = "devpod provider list | grep -qw docker || devpod provider add docker"
dev = { cmd = "devpod up . --ide none && ssh colcon_runner.devpod", depends-on = ["dev-add-docker"] }
dev-vs = { cmd = "devpod up . --ide vscode", depends-on = ["dev-add-docker"] }
dev-restart = { cmd = "devpod up . --recreate --ide none && ssh colcon_runner.devpod", depends-on = ["dev-add-docker"] }
dev-restart-vs = { cmd = "devpod up . --recreate --ide vscode", depends-on = ["dev-add-docker"] }
prek = "prek run -a"
prek-update = "prek autoupdate"
format = "ruff format ."
check-clean-workspace = "git diff --exit-code"
ruff-lint = "ruff check . --fix"
pylint = "pylint --version && echo 'running pylint...' && pylint $(git ls-files '*.py')"
ty = "ty check --respect-ignore-files ."
lint = { depends-on = ["ruff-lint", "ty", "pylint"] }
style = { depends-on = ["format", "lint"] }
commit-format = "git commit -a -m'autoformat code' || true"
test = "pytest"
coverage = "coverage run -m pytest && coverage xml -o coverage.xml"
coverage-report = "coverage report -m"
update-lock = "pixi update && git commit -a -m'update pixi.lock' || true"
push = "git push"
update-lock-push = { depends-on = ["update-lock", "push"] }
fix = { depends-on = ["update-lock", "format", "ruff-lint", "prek"] }
fix-commit-push = { depends-on = ["fix", "commit-format", "update-lock-push"] }
ci-no-cover = { depends-on = ["style", "test"] }
ci = { depends-on = [
  "format",
  "ruff-lint",
  "pylint",
  "ty",
  "coverage",
  "coverage-report",
] }
ci-push = { depends-on = ["format", "ruff-lint", "update-lock", "ci", "push"] }
clear-pixi = "rm -rf .pixi pixi.lock"
setup-git-merge-driver = "git config merge.ourslock.driver true"
update-from-template-repo = "./scripts/update_from_template.sh"

[tool.pylint]
extension-pkg-whitelist = ["numpy"]
jobs = 16                           #detect number of cores

[tool.pylint.'MESSAGES CONTROL']
disable = "C,logging-fstring-interpolation,line-too-long,fixme,broad-exception-caught,missing-module-docstring,too-many-instance-attributes,too-few-public-methods,too-many-arguments,too-many-locals,too-many-branches,too-many-statements,use-dict-literal,cyclic-import,duplicate-code,too-many-public-methods"
enable = "no-else-return,consider-using-in"

[tool.coverage.run]
omit = ["*/test/*", "__init__.py"]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "if False:",
  "if 0:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "pass",
  "(_):",
]

[tool.pytest.ini_options]
testpaths = ["test"]
norecursedirs = ["ros_ws"]
