<?xml version="1.0"?>
<package format="3">
  <name>jazzy_cpp_demo</name>
  <version>0.0.1</version>
  <description>Example C++ package built with colcon for ROS Jazzy.</description>
  <maintainer email="dev@example.com">Colcon Runner</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
